[package]
name = "iroh-libevent"
version = "0.1.0"
edition = "2021"
description = "C API for iroh with libevent2 integration"
license = "MIT OR Apache-2.0"

[lib]
name = "iroh_libevent"
path = "src/lib.rs"
crate-type = ["cdylib", "staticlib"]

[dependencies]
iroh = "0.96"
iroh-base = "0.96"
iroh-gossip = "0.96"
iroh-blobs = "0.98"
iroh-docs = "0.96"
tokio = { version = "1", features = ["full", "sync", "rt-multi-thread"] }
bytes = "1"
parking_lot = "0.12"
once_cell = "1"
libc = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.9"
anyhow = "1"
n0-future = "0.1"
blake3 = "1"

[build-dependencies]
cbindgen = "0.27"
